# auto-ai-cr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/: auto-ai-cr.py
scripts/: install.ps1  install.sh
src/auto_ai_cr/: __init__.py  cli.py  config.py  fixer.py  git_ops.py  hooks.py  monitor.py  opener.py  reviewer.py  watcher.py  web_ui.py
tests/: test_cli.py  test_config.py  test_config_write.py  test_fixer.py  test_git_ops.py  test_monitor.py  test_opener.py  test_reviewer.py  test_web_ui.py
